# Hello_Universe

./: README.md
backend/: .env  .env.example  Cargo.toml
backend/src/: errors.rs  lib.rs  main.rs
backend/src/config/: db.rs
backend/src/controllers/: ai_ctrl.rs  blockchain_ctrl.rs  dashboard_ctrl.rs  mod.rs  robotics_ctrl.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/routes/: ai.rs  blockchain.rs  dashboard.rs  robotics.rs
backend/src/services/: ai_services.rs  crypto_services.rs  robotics_services.rs
backend/src/utils/: crypto.rs  jwt.rs  logger.rs  mod.rs
contracts/: hardhat.config.js  package-lock.json
frontend/: package-lock.json  package.json
frontend/public/assets/animations/: .gitkeep
frontend/public/assets/logos/: .gitkeep
frontend/public/assets/models/: .gitkeep
frontend/public/assets/textures/: .gitkeep
frontend/public/fonts/: .gitkeep
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/ai-labs/: page.tsx
frontend/src/app/api/auth/: route.ts
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/blockchain/: page.tsx
frontend/src/app/user/dashboard/: page.tsx
frontend/src/app/user/settings/: page.tsx
frontend/src/components/3d/: Controls.tsx  Robot.tsx  Scene.tsx
frontend/src/components/blockchain/: TransactionList.tsx  WalletModal.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/hooks/: use3D.ts  useAI.ts  useWeb3.ts
frontend/src/lib/: crypto.ts  pg.ts  utils.ts
frontend/src/lib/validations/: index.ts
frontend/src/services/: api-client.ts  blockchain-provider.tsx
frontend/src/store/: useChainStore.ts  useUserStore.ts
frontend/src/types/: blockchain.types.ts  index.d.ts
