[package]
name = "backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["RoboVeda Team"]
description = "RoboVeda Backend API - AI, Robotics, and Blockchain Platform"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.5"
actix-rt = "2"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
rand = "0.8"
num_cpus = "1.16"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP Client (for external APIs)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
actix-test = "0.1"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
