[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]

# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-governor = "0.5"
actix-rt = "2"


# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"